# coursework_6

./: .env.template  README.md  pyproject.toml
app_accounts/: admin.py  apps.py  cronjobs.py  forms.py  models.py  services.py  urls.py  views.py
app_accounts/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py  0003_alter_user_options.py
app_blog/: admin.py  apps.py  models.py  urls.py  views.py
app_blog/migrations/: 0001_initial.py
app_logging/: admin.py  apps.py  models.py  services.py
app_logging/migrations/: 0001_initial.py
app_mailing/: admin.py  apps.py  cronjobs.py  forms.py  models.py  urls.py
app_mailing/migrations/: 0001_initial.py  0002_mailing_subscribers.py  0003_mailing_attempts_count_mailingresend.py  0004_alter_mailing_options_alter_mailing_mailing_status.py
app_mailing/views/: __init__.py  mail_message_view.py  mailing_view.py
config/: settings.py  urls.py
landing/: views.py
static/css/: style.css
static/js/: app.script.js
templates/app_accounts/: block_unblock_user.html  login.html  register.html  reset_password.html  reset_password_success.html  user_detail.html  user_edit.html  user_email_verify.html  user_email_verify_failed.html  user_list.html  user_password_change.html
templates/app_blog/: article_detail.html  article_form.html  article_list.html
templates/app_mailing/: mailing_detail.html  mailing_form.html  mailing_list.html  mailing_stop.html  mailmessage_detail.html  mailmessage_form.html  mailmessage_list.html
utils/: const.py  hash_storage.py
(+9 files in other folders)
